--- a/jekyll/login/index.html
+++ b/jekyll/login/index.html
@@ -7,29 +7,24 @@ mixins: header-mixin
 
 <div class="page-content">
     <!-- MDL Progress Bar with Indeterminate Progress -->
-    <div id="p2" v-show="loading" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
+    <div id="progressLoader" v-show="loading" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
     <div class="mdl-grid">
 
         <!-- <div class="mdl-cell mdl-cell--4-col"></div> -->
         <div class="mdl-cell mdl-cell--4-col" style="margin: auto;">
 
             <h2>Login</h2>
-
-            <form action="#">
               <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <input class="mdl-textfield__input" type="username" id="username"
                 v-model="credentials.username">
                 <label class="mdl-textfield__label" for="username">username</label>
               </div>
-            </form>
 
-            <form action="#">
               <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <input class="mdl-textfield__input" type="password" id="password"
                 v-model="credentials.password" @keyup.enter="submit()">
                 <label class="mdl-textfield__label" for="password">password</label>
               </div>
-            </form>
 
             <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" @click="submit()"
             :disabled="disabled">
