--- a/jekyll/upload-form/index.html
+++ b/jekyll/upload-form/index.html
@@ -17,7 +17,7 @@ mixins: header-mixin
 
                 <div class="dropzone-text">
 
-                    <span class="dropzone-title" v-if="!fileName">Drop file here or click to select</span>
+                    <span class="dropzone-title" v-if="!fileName">Drop file (xlsx) here or click to select</span>
                     <span class="dropzone-info" v-else>[{ fileName }]</span>
                 </div>
                 <input type="file" id="xls_file" name="xls_file">
