--- a/jekyll/login/index.html
+++ b/jekyll/login/index.html
@@ -5,39 +5,85 @@ auth: auth
 mixins: header-mixin
 ---
 
-<div class="page-content">
-    <!-- MDL Progress Bar with Indeterminate Progress -->
-    <div id="progressLoader" v-show="loading" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
-    <div class="mdl-grid">
 
-        <!-- <div class="mdl-cell mdl-cell--4-col"></div> -->
+<main>
+<v-content>
+          <v-container>
+          <v-row>
+            <v-col xs4 style="margin: auto;">
+
+                  <h2>Login</h2>
+
+
+                    <v-text-field
+                      name="input-10-1"
+                      label="Enter your username"
+                      v-model="credentials.username"
+                    ></v-text-field>
+
+                    <v-text-field
+                      name="input-10-1"
+                      label="Enter your password"
+                      v-model="credentials.password"
+                      @keyup.enter.native="submit()"
+                    ></v-text-field>
+
+                  <!-- <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
+                  :disabled="disabled">
+                    Log in
+                  </button> -->
+                  <div>
+                    <v-btn @click.native="submit()" :disabled="disabled">Log in</v-btn>
+                  </div>
+
+                  <p class="authValidation" v-show="invalid" v-cloak>Invalid username or password</p>
+
+                  </v-col>
+              </v-row>
+
+          </v-container>
+        </v-content>
+    <!-- <v-content>
+      <v-container fluid class="content">
+
+      <v-row>
+        <v-col xs4>
+
         <div class="mdl-cell mdl-cell--4-col" style="margin: auto;">
 
-            <h2>Login</h2>
-              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input class="mdl-textfield__input" type="username" id="username"
-                v-model="credentials.username">
-                <label class="mdl-textfield__label" for="username">username</label>
+                    <h2>Login</h2>
+
+
+                    <v-text-field
+                      name="input-10-1"
+                      label="Enter your username"
+                      v-model="credentials.username"
+                    ></v-text-field>
+
+                    <v-text-field
+                      name="input-10-1"
+                      label="Enter your password"
+                      v-model="credentials.password"
+                      @keyup.enter="submit()"
+                    ></v-text-field>
+
+                  <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" @click="submit()"
+                  :disabled="disabled">
+                    Log in
+                  </button>
+
+                  <p class="authValidation" v-show="invalid" v-cloak>Invalid username or password</p>
+
               </div>
 
-              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input class="mdl-textfield__input" type="password" id="password"
-                v-model="credentials.password" @keyup.enter="submit()">
-                <label class="mdl-textfield__label" for="password">password</label>
-              </div>
+        </v-col>
+      </v-row>
 
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" @click="submit()"
-            :disabled="disabled">
-              Log in
-            </button>
+      </v-container>
+    </v-content> -->
+  </main>
 
-            <p class="authValidation" v-show="invalid" v-cloak>Invalid username or password</p>
 
-        </div>
-
-    </div>
-
-</div>
 
 <link rel="stylesheet" href="../css/forms.css">
 <link rel="stylesheet" href="../css/dialog-polyfill.css">
