--- a/jekyll/login/index.html
+++ b/jekyll/login/index.html
@@ -14,11 +14,6 @@ mixins: header-mixin
         <div class="mdl-cell mdl-cell--4-col" style="margin: auto;">
 
             <h2>Login</h2>
-              <!-- <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input class="mdl-textfield__input" type="username" id="username"
-                v-model="credentials.username">
-                <label class="mdl-textfield__label" for="username">username</label>
-              </div> -->
 
               <ui-textbox
                   floating-label
@@ -35,16 +30,12 @@ mixins: header-mixin
                   @keyup.enter.native="submit()"
               ></ui-textbox>
 
-              <!-- <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input class="mdl-textfield__input" type="password" id="password"
-                v-model="credentials.password" @keyup.enter="submit()">
-                <label class="mdl-textfield__label" for="password">password</label>
-              </div> -->
-
+            <div>
             <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" @click="submit()"
             :disabled="disabled">
               Log in
             </button>
+            </div>
 
             <p class="authValidation" v-show="invalid" v-cloak>Invalid username or password</p>
 
